--- a/gui/BattleMode.fxml
+++ b/gui/BattleMode.fxml
@@ -19,35 +19,43 @@
          <left>
             <ListView fx:id="monsters" prefHeight="350.0" prefWidth="194.0" BorderPane.alignment="CENTER" />
          </left>
-         <bottom>
-            <BorderPane prefHeight="24.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <right>
-                  <Button mnemonicParsing="false" onAction="#addInit" prefHeight="25.0" prefWidth="102.0" text="Add Init" BorderPane.alignment="CENTER" />
-               </right>
-               <left>
-                  <TextField fx:id="playerName" prefHeight="25.0" prefWidth="445.0" BorderPane.alignment="CENTER" />
-               </left>
-               <center>
-                  <TextField fx:id="playerInit" prefHeight="25.0" prefWidth="60.0" BorderPane.alignment="CENTER" />
-               </center>
-            </BorderPane>
-         </bottom>
-         <top>
-            <BorderPane prefHeight="21.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <left>
-                  <TextField fx:id="monsterName" prefHeight="40.0" prefWidth="441.0" BorderPane.alignment="CENTER" />
-               </left>
-               <center>
-                  <TextField fx:id="monsterInit" prefHeight="41.0" prefWidth="367.0" BorderPane.alignment="CENTER" />
-               </center>
-               <right>
-                  <Button mnemonicParsing="false" onAction="#addMonster" text="Add Monster" BorderPane.alignment="CENTER" />
-               </right>
-            </BorderPane>
-         </top>
          <center>
             <Button mnemonicParsing="false" onAction="#calculate" text="Calculate" BorderPane.alignment="CENTER" />
          </center>
+         <top>
+            <GridPane prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="428.0" minWidth="10.0" prefWidth="412.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="194.0" minWidth="6.0" prefWidth="83.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="144.0" minWidth="10.0" prefWidth="105.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="monsterName" prefHeight="19.0" prefWidth="412.0" />
+                  <TextField fx:id="monsterInit" prefHeight="23.0" prefWidth="83.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#addMonster" prefHeight="25.0" prefWidth="103.0" text="Add Monster" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+         </top>
+         <bottom>
+            <GridPane prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TextField fx:id="playerName" prefHeight="19.0" prefWidth="412.0" />
+                  <TextField fx:id="playerInit" prefHeight="23.0" prefWidth="83.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#addInit" prefHeight="25.0" prefWidth="103.0" text="Add Player" GridPane.columnIndex="2" />
+               </children>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="428.0" minWidth="10.0" prefWidth="412.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="194.0" minWidth="6.0" prefWidth="83.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="144.0" minWidth="10.0" prefWidth="105.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+               </rowConstraints>
+            </GridPane>
+         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
